<?xml version="1.0"?>
<package format="2">
  <name>avoidance_intervals</name>
  <version>0.0.0</version>
  <description>The avoidance_intervals package</description>

  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>
  <license>BSD</license>
 <!-- <url type="website">http://wiki.ros.org/dirrt_star</url> -->
  <author email="manuel.beschi@stiima.cnr.it">Manuel Beschi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libfcl-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>libfcl-dev</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>libfcl-dev</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <depend>velocity_scaling_iso15066</depend>
  <depend>human_motion_prediction</depend>

</package>
